# ScreenshotSearch

./: .gitignore  README.md  calc_size.py  main.py  make_result_hierarchy.py  pyproject.toml  remove_duplicate_results.py  resolve_results.py  settings.py
src/: folder_reader.py  frame_compiler.py  logger.py  match_processor.py  search_processor.py
