[tool.poetry]
name = "anime-screenshot-search"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Undore <hey.ya.dj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^14.0.0"
click = "^8.2.1"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"
imagehash = "^4.3.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
